--- a/package.json
+++ b/package.json
@@ -1,5 +1,4 @@
 {
-  "homepage": "https://github.com/Amirkhan5721/ReactForm",
   "name": "vite-project",
   "private": true,
   "version": "0.0.0",
@@ -30,5 +29,6 @@
     "postcss": "^8.5.3",
     "tailwindcss": "^4.1.3",
     "vite": "^6.2.0"
-  }
+  },
+  "homepage": "https://github.com/Amirkhan5721/ReactForm"
 }
